# ChangeLog for kde-misc/smooth-tasks
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/smooth-tasks/ChangeLog,v 1.1 2010/11/06 22:58:48 dilfridge Exp $

*smooth-tasks-20101106 (06 Nov 2010)

  06 Nov 2010; Andreas K. Huettel <dilfridge@gentoo.org>
  +smooth-tasks-20101106.ebuild, +metadata.xml:
  New plasmoid, fixes bug 281943
