@@ -1,8 +1,8 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/stock-quote/stock-quote-2.1.ebuild,v 1.3 2010/11/03 21:46:23 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/stock-quote/stock-quote-2.1.ebuild,v 1.4 2011/01/31 06:45:43 tampakrap Exp $
 
-EAPI=2
+EAPI=3
 inherit kde4-base
 
 MY_P=plasma_${PN/-/_}-${PV}
@@ -16,8 +16,9 @@ SLOT="4"
 KEYWORDS="amd64 x86"
 IUSE=""
 
-RDEPEND=">=kde-base/plasma-workspace-${KDE_MINIMAL}"
-
+RDEPEND="
+	$(add_kdebase_dep plasma-workspace)
+"
 S=${WORKDIR}/${MY_P}
 
-DOCS="CHANGELOG README"
+DOCS=( CHANGELOG README )
