@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/stock-quote
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/stock-quote/ChangeLog,v 1.3 2010/11/03 21:46:23 maekke Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/stock-quote/ChangeLog,v 1.4 2011/01/31 06:45:43 tampakrap Exp $
+
+  31 Jan 2011; Theo Chatzimichos <tampakrap@gentoo.org> stock-quote-2.1.ebuild:
+  EAPI3
 
   03 Nov 2010; Markus Meier <maekke@gentoo.org> stock-quote-2.1.ebuild:
   x86 stable, bug #342617
